syntax = "proto3";
package go_proto;

option go_package = "/pb/product";

message Pagination {
    uint64 total = 1;
    uint32 per_page = 2;
    uint64 current_page = 3;
    uint64 last_page = 4;
}
